RESOLVED FIXED240602
[LibWPE] Fix build failure when enabling LAYOUT_FORMATTING_CONTEXT
https://bugs.webkit.org/show_bug.cgi?id=240602
Summary [LibWPE] Fix build failure when enabling LAYOUT_FORMATTING_CONTEXT
Basuke Suzuki
Reported 2022-05-18 14:43:36 PDT
Attachments
EWS
Comment 1 2022-05-18 14:58:35 PDT
Committed r294437 (250715@main): <https://commits.webkit.org/250715@main> Reviewed commits have been landed. Closing PR #747 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2022-05-18 14:59:14 PDT
Note You need to log in before you can comment on or make changes to this bug.