[LibWPE] Fix build failure when enabling LAYOUT_FORMATTING_CONTEXT https://bugs.webkit.org/show_bug.cgi?id=240602

Unreviewed, fix libwpe build with the flag after r294399

* editing/libwpe/EditorLibWPE.cpp:

Canonical link: https://commits.webkit.org/250715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294437 268f45cc-cd09-0410-ab3c-d52691b4dbfc