Source/WebCore/editing/libwpe/EditorLibWPE.cpp
@@ -30,6 +30,7 @@
 
 #include "DocumentFragment.h"
 #include "Frame.h"
+#include "FrameDestructionObserverInlines.h"
 #include "NotImplemented.h"
 #include "Pasteboard.h"
 #include "Settings.h"
